updated with start button and initial functionality

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="row timer"></div>
             <div class="row question"></div>
             <div class="row answers"></div>
-                <!-- <button id="start-button" class="btn btn-lg">Start!</button> -->
+            </div>
         </div>
     </div>
 </body>
