working start page and first question

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="row timer"></div>
             <div class="row question"></div>
             <div class="row answers"></div>
-            </div>
+            <div class="row gif"></div>
         </div>
     </div>
 </body>
