updated style - need to fix reset and countdown trigger

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <div class="wrapper">
         <div class="container col-8 main">
-            <div class="row">
-                <h1>Totally Trivial Trivia</h1>
+            <div class="row game-title">
+                <h1>Totally Trivial Trivia!!</h1>
             </div>
             <div class="row timer"></div>
             <div class="row question"></div>
