centers text on display, need to fix reset and countdown trigger at zero

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
     <div class="wrapper">
         <div class="container col-8 main">
-            <div class="row game-title">
+            <div class="row game-title justify-content-center">
                 <h1>Totally Trivial Trivia!!</h1>
             </div>
-            <div class="row timer"></div>
-            <div class="row question"></div>
-            <div class="row answers"></div>
+            <div class="row timer justify-content-center"></div>
+            <div class="row question justify-content-center"></div>
+            <div class="row answers justify-content-center"></div>
             <div class="row gif"></div>
         </div>
     </div>
